# simple-cex-rust

./: Cargo.toml  README.md
src/: lib.rs  simple_binance_client.rs  simple_bitget_client.rs  simple_bybit_client.rs  simple_coinbase_client.rs  simple_gate_client.rs  simple_kraken_client.rs  simple_okx_client.rs
