[package]
name = "simple_cex_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.27"
p256 = { version = "0.13.2", features = ["ecdsa", "pem", "pkcs8"] }
rand = "0.9.1"
reqwest = "0.12.22"
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
